# apricot-julia

./: Makefile  README.md  pyproject.toml
data/: digits_data.jld
notebooks/: calculate_gains.ipynb  julia_benchmark.ipynb  julia_reimpl.ipynb  python_benchmark.ipynb  python_reimpl.ipynb
notebooks/.ipynb_checkpoints/: calculate_gains-checkpoint.ipynb  julia_benchmark-checkpoint.ipynb  julia_reimpl-checkpoint.ipynb  python_benchmark-checkpoint.ipynb  python_reimpl-checkpoint.ipynb
src/: calc_gains.jl  calc_gains.py  calc_gains2.jl
