[tool.poetry]
name = "apricot-julia"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.1"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
apricot-select = "^0.6.1"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
scipy = "^1.7.1"
ipykernel = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
